<resources>
    <string name="app_name">Courses</string>
    <string name="search_courses">Search courses…</string>
    <string name="search_icon_button_filter">filter</string>
    <string name="main_screen_sort">По дате добавления</string>
    <string name="main">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="account">Аккаунт</string>
    <string name="RUB">₽</string>
    <string name="more_details">Подробнее</string>
    <string name="start_course">Начать курс</string>
    <string name="goto_platform">Перейти на платформу</string>
    <string name="about_course_mock"><![CDATA[У вас будет 7 видеоуроков в высоком качестве. На них спикер объясняет теорию и показывает как выполнять практические задания. Доступ к материалам сохраняется на 2 года\nКроме теоретических материалов вас ждут тесты и практические задания. Они помогут лучше запомнить новую информацию и прокачать навыки, которые необходимы для реальной работы с RabbitMQ.]]><![CDATA[У вас будет 7 видеоуроков в высоком качестве. На них спикер объясняет теорию и показывает как выполнять практические задания. Доступ к материалам сохраняется на 2 года\nКроме теоретических материалов вас ждут тесты и практические задания. Они помогут лучше запомнить новую информацию и прокачать навыки, которые необходимы для реальной работы с RabbitMQ.]]></string>
    <string name="profile">Профиль</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="settings">Настройки</string>
    <string name="log_out">Выйти из аккаунта</string>
    <string name="your_courses">Ваши курсы</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courseAboutTV">О курсе</string>
</resources>